# GOS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  clippy.toml  compose.dev.yml  cspell.config.json  docs-preview.html  documentation.md  file_db_time_trial.sh  index.html  index.md  rustfmt.toml  spec.md  todo.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  main.yml  non-main.yml  nuke-docs.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/gos/v1/: gos.proto
crates/api/src/: index.md  lib.rs  service.rs
crates/gitehr-temp/: Cargo.toml
crates/gitehr-temp/src/: lib.rs
crates/gos/: Cargo.toml  build.rs
crates/gos-proto/: Cargo.toml  build.rs
crates/gos-proto/src/: lib.rs
crates/gos/src/: index.md  lib.rs  main.rs  service.rs
crates/vpr/: Cargo.toml  build.rs
crates/vpr-proto/: Cargo.toml  build.rs
crates/vpr-proto/src/: lib.rs
crates/vpr-temp/: Cargo.toml
crates/vpr-temp/src/: lib.rs
crates/vpr/src/: index.md  lib.rs  main.rs  service.rs
scripts/: check-all.sh  create_patient.sh  fmt.sh  lint.sh
src/: lib.rs  main.rs  service.rs
utils/: file_db_time_trial.sh
