[package]
name = "gitehr-temp"
version = "0.1.0"
edition = "2021"

[lib]
name = "gitehr_temp"
path = "src/lib.rs"

[dependencies]
gos-proto = { path = "../gos-proto" }
tonic = { version = "0.12" }
uuid = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
